# b4m35pag-space-simulator

./: CMakeLists.txt  benchmark.sh  main.cpp  main.h  results-ofast-vect-paralel.txt  results-ofast-vect.txt  results-ofast.txt  results-serial.txt  run_simulator.sh
callgrind/: callgrind.out.10638  callgrind.out.11895  callgrind.out.9616  callgrind.out.9791
input/: 100.txt  1000.txt  10000.txt  20.txt  200.txt  2000.txt  400.txt  5000.txt  600.txt  800.txt
